# grf

./: .gitattributes  .gitignore  Cargo.toml  README.md  dist-workspace.toml  justfile
local/neo4j/: docker-compose.yml  queries.txt
local/neo4j/init/: init.sh
local/neo4j/scripts/: load-data.cypher
src/: app.rs  cli.rs  config.rs  error.rs  logging.rs  main.rs  utils.rs
src/cmds/: console.rs  mod.rs  query.rs
src/domain/: benchmark.rs  mod.rs  output.rs  pager.rs  result.rs
src/repository/: client.rs
src/service/: output.rs
src/service/snapshots/: grafq__service__write__tests__write_csv_handles_non_strings_and_numbers.snap  grafq__service__write__tests__write_csv_writes_correct_headers_and_rows.snap  grafq__service__write__tests__write_json_works_as_expected.snap
src/view/: console.rs  results.rs
src/view/assets/: logo.txt
src/view/snapshots/: gcue__view__results__tests__get_results_formats_array_of_objects_into_table.snap  grafq__view__console__tests__banner_and_help_are_printed_correctly.snap
tests/: console_test.rs  query_test.rs  root_test.rs
tests/common/: mod.rs
