[package]
name = "grafq"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/grafq"
description = "query Neo4j/AWS Neptune databases via an interactive console"
homepage = "https://github.com/dhth/grafq"
keywords = [
    "cli",
    "neo4j",
    "aws-neptune",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "deny.toml",
    "justfile",
    "local",
]

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.7"
aws-sdk-neptunedata = "1.86.0"
aws-smithy-types = "1.3.4"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
csv = "1.4.0"
etcetera = "0.10.0"
neo4rs = "0.8.0"
rustyline = { version = "17.0.2", default-features = false, features = ["with-file-history"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tabled = "0.20"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.43", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
which = "8.0.0"

[dev-dependencies]
insta = { version = "1.44.3", features = ["yaml"] }
insta-cmd = "0.6.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
